crates/jsonschema-codegen/tests/ui/invalid_dynamic_ref_type.rs
#[jsonschema::validator(
    schema = r#"{"$dynamicRef": 1}"#,
    draft = referencing::Draft::Draft202012
)]
struct InvalidDynamicRefTypeValidator;

fn main() {}
